Cleanup (IDEA-CR-70012)
(closing directory streams; dropping unnecessary conversions; migrating more methods to NIO2)

GitOrigin-RevId: 9d9f3cc4756aaca97d2a7a9618876f5093a10d58